[gd_scene load_steps=12 format=2]

[ext_resource path="res://Materials/Purple.material" type="Material" id=1]
[ext_resource path="res://Materials/blue.material" type="Material" id=2]
[ext_resource path="res://Scenes/Customisation/CostumazationUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Materials/DarkWood.material" type="Material" id=4]
[ext_resource path="res://Scenes/characters/Players/Armatures/Armature-F.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/characters/Players/Armatures/Armature-M.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/CharacterCostumisation.gd" type="Script" id=7]
[ext_resource path="res://SFX/intro.ogg" type="AudioStream" id=8]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="QuadMesh" id=2]

[sub_resource type="SphereMesh" id=3]

[node name="Spatial" type="Spatial"]
script = ExtResource( 7 )

[node name="ArmatureF" parent="." instance=ExtResource( 5 )]

[node name="ArmatureM" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.25, 0, 0, 0, -1.09278e-08, -0.25, 0, 0.25, -1.09278e-08, 0, 0, 0 )

[node name="Scenary" type="Node" parent="."]

[node name="Podium" type="MeshInstance" parent="Scenary"]
transform = Transform( 1, 0, 0, 0, 0.396842, 0, 0, 0, 1, 0, -0.444276, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="Floor" type="MeshInstance" parent="Scenary"]
transform = Transform( 20, 0, 0, 0, -8.74228e-07, 20, 0, -20, -8.74228e-07, 0, -0.705526, 1.73512e-07 )
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="Wall" type="MeshInstance" parent="Scenary"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="Lights" type="Node" parent="."]

[node name="FillLight" type="SpotLight" parent="Lights"]
transform = Transform( 0.633515, 0.390753, -0.667811, -0.0265253, 0.873566, 0.485982, 0.773276, -0.290163, 0.563782, -2.91625, 2.2529, 1.94926 )
light_color = Color( 0.92549, 0.690196, 0.239216, 1 )
light_energy = 3.0

[node name="KeyLight" type="SpotLight" parent="Lights"]
transform = Transform( 0.826305, 0, 0.563223, 0, 1, 0, -0.563223, 0, 0.826305, 1.81484, 1.99484, 2.45741 )

[node name="BackLight" type="SpotLight" parent="Lights"]
transform = Transform( -0.999043, -0.0430585, 0.00764419, -0.0405215, 0.977189, 0.208469, -0.0164462, 0.207959, -0.977999, -0.00385984, 2.58486, -2.79266 )
light_color = Color( 0.0941176, 0.192157, 0.811765, 1 )
light_energy = 4.0

[node name="Birdie" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, -2.22211, -0.97776, -9.3349 )
spot_range = 8.96412
spot_angle = 28.714

[node name="Birdie3" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.211455, -1.86173, -9.3349 )
spot_range = 8.96412
spot_angle = 23.6472

[node name="Birdie2" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 2.73788, -0.97776, -9.3349 )
spot_range = 8.96412
spot_angle = 28.714

[node name="DirectionalLight" type="DirectionalLight" parent="Lights"]
transform = Transform( 0.641463, 0.767124, 0.00672169, -7.65985e-10, -0.00876185, 0.999962, 0.767154, -0.641439, -0.0056204, -7.72004, 4.99001, 4.61709 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.999866, 0.0163705, 0, -0.0163705, 0.999866, 0, 0.948956, 2.62775 )

[node name="CostumazationUI" parent="." instance=ExtResource( 3 )]

[node name="CharacterSelect" parent="CostumazationUI/Controls" index="1"]
items = [ "Freya", null, false, 0, null, "Frey", null, false, 1, null ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
autoplay = true
[connection signal="item_selected" from="CostumazationUI/Controls/CharacterSelect" to="." method="_on_CharacterSelect_item_selected"]
[connection signal="pressed" from="CostumazationUI/Controls/HBoxContainer/LeftButton" to="." method="_on_change_pressed" binds= [ "left" ]]
[connection signal="pressed" from="CostumazationUI/Controls/HBoxContainer/RightButton" to="." method="_on_change_pressed" binds= [ "right" ]]
[connection signal="pressed" from="CostumazationUI/Controls/HBoxContainer2/StartButton" to="." method="_on_StartButton_pressed"]

[editable path="CostumazationUI"]
